--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <mysql-connector.version>6.0.5</mysql-connector.version>
         <jstl-version>1.2</jstl-version>
         <tomcat-connection-pool.version>9.0.0.M17</tomcat-connection-pool.version>
+
+        <jackson-version-databind>2.5.0</jackson-version-databind>
+        <jackson-version-mapper>1.9.10</jackson-version-mapper>
     </properties>
 
     <dependencies>
@@ -73,6 +76,18 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jdbc</artifactId>
             <version>${tomcat-connection-pool.version}</version>
+        </dependency>
+
+        <!-- JSON mapper -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-version-databind}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>${jackson-version-mapper}</version>
         </dependency>
 
     </dependencies>
