--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <jackson-version-mapper>1.9.10</jackson-version-mapper>
         <aspectj-version>1.7.3</aspectj-version>
         <jjwt-version>0.6.0</jjwt-version>
+
+        <servlet-api.version>3.1.0</servlet-api.version>
     </properties>
 
     <dependencies>
@@ -133,7 +135,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${servlet-api.version}</version>
         </dependency>
 
         <!-- Token dependency -->
