--- a/src/main/web/WEB-INF/configuration/spring.properties
+++ b/src/main/web/WEB-INF/configuration/spring.properties
@@ -1,3 +1,3 @@
-database.connection.url = jdbc:mysql://localhost:3306/petition_spring?useSSL=false
+database.connection.url = jdbc:mysql://localhost:3306/petition_spring?useSSL=false&characterEncoding=UTF-8
 database.connection.user = root
 database.connection.password = 123456
